Changelog for s6.

In 2.11.4.0
-----------

 - New option to s6-svc: -s, to specify a signal by name (or number).
 - New option to s6-log: -t, to specify a timeout for partial last lines.


In 2.11.3.2
-----------

 - Dependency fixes.


In 2.11.3.1
-----------

 - Resource limit shenanigans.


In 2.11.3.0
-----------

 - Bugfixes.
 - Internal changes to instances and servicedir reserved names.
 - New s6-svc -Q command.
 - -0167 options to s6-ioconnect are now deprecated.


In 2.11.2.0
-----------

 - Adaptation to skalibs-2.13.0.0.
 - Bugfixes.
 - New s6-svc -D and s6-svc -U commands.
 - The name of the service is now passed as an argument to ./run and
as the third argument to ./finish.
 - The 1-second service restart delay can now only be skipped when
the service is ready.
 - New s6-log directive: p, to set a log line prefix.
 - Implementation of instances! New programs: s6-instance-maker,
s6-instance-create, s6-instance-delete, s6-instance-control,
s6-instance-status, s6-instance-list.


In 2.11.1.2
-----------

 - Bugfixes.


In 2.11.1.1
-----------

 - Adaptation to skalibs-2.12.0.0.


In 2.11.1.0
-----------

 - Bugfixes.
 - s6-applyuidgid and s6-setuidgid can now be used by non-root users.
 - New s6-envdir option: -L, for unlimited size environment variables.


In 2.11.0.1
-----------

 - Bugfixes.


In 2.11.0.0
-----------

 - Adaptation to skalibs-2.11.0.0.
 - Bugfixes.
 - s6-svwait now supports -r and -R options to wait for restarts.
 - New service directory file: lock-fd, to take a lock before
starting a service, protecting against concurrent instances.
 - s6/lock.h, s6/supervise.h, s6/fdholder.h: simpler header names
 - New binaries: s6-svlink, s6-svunlink
 - s6-ioconnect bugfix; does not support zero-copy anymore.


In 2.10.0.3
-----------

 - Bugfixes.


In 2.10.0.2
-----------

 - Bugfixes.


In 2.10.0.1
-----------

 - Bugfixes.


In 2.10.0.0
-----------

 - Bugfixes.
 - Changes to s6-svscan and s6-svscanctl: the list of commands