@@ -7,7 +7,7 @@ Build Instructions
   - A POSIX-compliant C development environment
   - GNU make version 3.81 or later
   - skalibs version 2.13.2.0 or later: https://skarnet.org/software/skalibs/
-  - execline version 2.9.3.0 or later: https://skarnet.org/software/execline/
+  - execline version 2.9.4.0 or later: https://skarnet.org/software/execline/
       (You can disable this requirement at configure time, but will
       lose some functionality.)
   - Optional: nsss version 0.2.0.3 or later: https://skarnet.org/software/nsss/
