@@ -88,7 +88,7 @@ requirement if you link against the shared version of the skalibs
 library. </li>
  <li> (Optional, but really recommended for full functionality):
 <a href="//skarnet.org/software/execline/">execline</a> version
-2.9.3.0 or later. When s6 is built with execline support (which is the default),
+2.9.4.0 or later. When s6 is built with execline support (which is the default),
 execline is a build-time requirement, and also a run-time requirement for
 certain binaries that spawn scripts interpreted with
 <a href="//skarnet.org/software/execline/execlineb.html">execlineb</a>. </li>
