@@ -27,7 +27,7 @@ the root or a branch of a <em>supervision tree</em>.
 <h2> Interface </h2>
 
 <pre>
-     s6-svscan [ -d <em>notif</em> ] [ -X <em>consoleholder</em> ] [ -c max ] [ -t <em>rescan</em> ] [ <em>scandir</em> ]
+     s6-svscan [ -d <em>notif</em> ] [ -X <em>consoleholder</em> ] [ -c max | -C services_max ] [ -L name_max ] [ -t <em>rescan</em> ] [ <em>scandir</em> ]
 </pre>
 
 <ul>
@@ -67,6 +67,7 @@ even that the relevant <a href="s6-supervise.html">s6-supervise</a> processes ha
 been started. If you need to test for <em>deep readiness</em>, meaning that all the
 services in the supervision tree have been started and are ready, you cannot rely
 on this option. </li>
+
  <li> <tt>-X&nbsp;<em>consoleholder</em></tt>&nbsp;: assume the output console is available
 on descriptor <em>consoleholder</em>. If this option is given, and a <tt>s6-svscan-log</tt>
 service exists, the <a href="s6-supervise.html">s6-supervise</a> process for that service
@@ -75,17 +76,31 @@ for a setup done via <a href="//skarnet.org/software/s6-linux-init/">s6-linux-in
 where all error messages go to the <tt>s6-svscan-log</tt> catch-all logger service by
 default, except messages from this service itself, which fall back to <em>consoleholder</em>.
 If you're not sure what to use this option for, or how, you don't need it. </li>
- <li> <tt>-c&nbsp;<em>max</em></tt>&nbsp;: maintain services for up to <em>max</em>
-service directories. Default is 500. Lower limit is 2. Upper limit is 90000. If
+
+ <li> <tt>-C&nbsp;<em>services_max</em></tt>&nbsp;: maintain services for up to <em>services_max</em>
+service directories, including loggers. Default is 1000. Lower limit is 4. Upper limit is 160000. If
 you're increasing this value from the default, please note that:
  <ul>
   <li> The higher <em>max</em> is, the more stack memory s6-svscan will use,
-up to 100 bytes per service. </li>
+up to 200 bytes per service, also depending on the value of <em>name_max</em>. </li>
   <li> s6-svscan uses 2 file descriptors per logged service. </li>
  </ul>
  It is the admin's responsibility to make sure that s6-svscan has enough available
 descriptors to function properly and does not exceed its stack limit. The default
-of 500 is safe and provides enough room for every reasonable system. </li>
+of 1000 is safe and provides enough room for every reasonable system. </li>
+
+ <li> <tt>-c&nbsp;<em>max</em></tt>&nbsp;: a deprecated way of setting <em>services_max</em>.
+If the <tt>-c</tt> option is given, the value of <em>max</em> is doubled, and the result
+is used as <em>services_max</em>. The reason for the change is that previous versions
+of s6-svscan handled services+loggers as a single entity; but this version of s6-svscan
+handles services and loggers in the same way, so with the default values it's now possible
+to handle e.g. 600 unlogged services, whereas previously you were limited to 500 because
+s6-svscan was reserving room for the loggers. </li>
+
+ <li> <tt>-L&nbsp;<em>name_max</em></tt>&nbsp;: the maximum length of a name in the
+scan directory. Names longer than <em>name_max</em> won't be taken into account.
+Default is 251. It cannot be set lower than 11 or higher than 1019. </li>
+
  <li> <tt>-t&nbsp;<em>rescan</em></tt>&nbsp;: perform a scan every <em>rescan</em>
 milliseconds. If <em>rescan</em> is 0 (the default), automatic scans are never performed after
 the first one and s6-svscan will only detect new services when told to via a
