@@ -5,6 +5,7 @@ In 2.11.4.0
 
  - New option to s6-svc: -s, to specify a signal by name (or number).
  - New option to s6-log: -t, to specify a timeout for partial last lines.
+ - s6-svscan rewrite: no more quadratic reaps, no more forced 1s wait on shutdown
 
 
 In 2.11.3.2
